fix: scrollbars removed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,7 +31,9 @@ $type: nodebug; // comment this line to enable debug mode.
     padding: 0px;
     margin: 0px;
 }
-
+body {
+    overflow: hidden;
+}
 @font-face
 {
     font-family: kanit;
@@ -101,6 +103,7 @@ div
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
     box-shadow: var(--soft-shadow);
 }
 
@@ -150,6 +153,6 @@ div
     justify-content: flex-start;
     align-items: center;
     width: 60px;
-    height: calc(100vh - 90px);
+    height: calc(100vh - 70px);
     border-top: none;
 }
